# study-buddy

./: .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml
ci_cd/: Dockerfile  deployment.yaml  service.yaml
manifests/: deployment.yaml  service.yaml
src/common/: custom_exception.py  logger.py
src/config/: settings.py  ui_config.ini  ui_config.py
src/generator/: question_generator.py
src/llm/: clients.py  groq_client.py
src/models/: question_schemas.py
src/prompts/: templates.py
src/utils/: helpers.py
